View Issue Details

IDProjectCategoryView StatusLast Update
0023809Open CASCADEOCCT:Modeling Algorithmspublic2013-04-29 15:24
ReporterabvAssigned Toemv 
PrioritynormalSeverityminor 
Status closedResolutionfixed 
PlatformWindowsOSVC++ 2008 
Product Version6.6.0 
Target Version6.6.0Fixed in Version6.6.0 
Summary0023809: New compiler warnings in new BOP, 64-bit VC++ 9.0
DescriptionOn Windows MSVC++ 9.0 64-bit reports about 300 compiler warnings in classes added for new BOP. Most of warnings are related to BOPCol_Array1 template class, and I suggest we shall first try replacing it by NCollection_Vector. Naturally performance must be carefully monitored.
Steps To ReproduceWarning 61 warning C4267: 'argument' : conversion from 'size_t' to 'const Standard_Integer', possible loss of data d:\ABV\OCCT\occt\inc\BOPCol_Array1.hxx 274 TKBO
Warning 62 warning C4267: 'argument' : conversion from 'size_t' to 'const Standard_Integer', possible loss of data d:\ABV\OCCT\occt\inc\BOPCol_Array1.hxx 274 TKBO
Warning 68 warning C4267: 'argument' : conversion from 'size_t' to 'const Standard_Integer', possible loss of data d:\ABV\OCCT\occt\inc\BOPCol_Array1.hxx 274 TKBO
Warning 69 warning C4267: 'argument' : conversion from 'size_t' to 'const Standard_Integer', possible loss of data d:\ABV\OCCT\occt\inc\BOPCol_Array1.hxx 274 TKBO
Warning 70 warning C4267: '=' : conversion from 'size_t' to 'Standard_Integer', possible loss of data d:\ABV\OCCT\occt\inc\BOPCol_Array1.hxx 418 TKBO
Warning 71 warning C4267: '=' : conversion from 'size_t' to 'Standard_Integer', possible loss of data d:\ABV\OCCT\occt\inc\BOPCol_Array1.hxx 426 TKBO
Warning 72 warning C4267: '=' : conversion from 'size_t' to 'Standard_Integer', possible loss of data d:\ABV\OCCT\occt\inc\BOPCol_Array1.hxx 418 TKBO
Warning 73 warning C4267: '=' : conversion from 'size_t' to 'Standard_Integer', possible loss of data d:\ABV\OCCT\occt\inc\BOPCol_Array1.hxx 426 TKBO
Warning 74 warning C4267: '=' : conversion from 'size_t' to 'Standard_Integer', possible loss of data d:\ABV\OCCT\occt\inc\BOPCol_Array1.hxx 418 TKBO
Warning 75 warning C4267: '=' : conversion from 'size_t' to 'Standard_Integer', possible loss of data d:\ABV\OCCT\occt\inc\BOPCol_Array1.hxx 426 TKBO
Warning 76 warning C4267: '=' : conversion from 'size_t' to 'Standard_Integer', possible loss of data d:\ABV\OCCT\occt\inc\BOPCol_Array1.hxx 418 TKBO
Warning 77 warning C4267: '=' : conversion from 'size_t' to 'Standard_Integer', possible loss of data d:\ABV\OCCT\occt\inc\BOPCol_Array1.hxx 426 TKBO
TagsNo tags attached.
Test case numberNot needed

Activities

emv

2013-03-12 16:35

developer   ~0023677

Git branch CR23809 is ready to be reviewed.

abv

2013-03-12 16:46

manager   ~0023679

No remarks, please test

mkv

2013-03-14 15:47

tester   ~0023723

Dear BugMaster,

Branch CR23809 (and products from GIT master) was compiled on Linux and Windows platforms and tested without rebase.
SHA-1: 4d5441fade19986dfcb5c963e29d6700b1857a9f

Number of compiler warnings:

occt component :
Linux: 3 (3 on master)
Windows: 11 (11 on master)

products component :
Linux: 0 (0 on master)
Windows: 50 (50 on master)

Regressions:
No regressions

Improvements:
No improvements

Testing cases:
Not needed

Testing on Linux:
Total MEMORY difference: 242810280 / 243316216
Total CPU difference: 16950.960000000417 / 15070.690000000037

Testing on Windows:
Total MEMORY difference: 345801164 / 346223184
Total CPU difference: 16562.4375 / 21621.359375

There are not serious differences in images found by testdiff.

Related Changesets

occt: master a82b7ef7

2013-03-12 12:31:02

emv

Details Diff
0023809: New compiler warnings in new BOP, 64-bit VC++ 9.0.
Standard_Size have been replaced by Standard_Integer to avoid warnings.
Affected Issues
0023809
mod - src/BOPCol/BOPCol_Array1.hxx Diff File
mod - src/BOPDS/BOPDS_Interf.hxx Diff File

Issue History

Date Modified Username Field Change
2013-03-02 23:17 abv New Issue
2013-03-02 23:17 abv Assigned To => jgv
2013-03-03 08:25 abv Assigned To jgv => emv
2013-03-03 08:25 abv Status new => assigned
2013-03-12 16:35 emv Note Added: 0023677
2013-03-12 16:35 emv Assigned To emv => abv
2013-03-12 16:35 emv Status assigned => resolved
2013-03-12 16:46 abv Note Added: 0023679
2013-03-12 16:46 abv Assigned To abv => bugmaster
2013-03-12 16:46 abv Status resolved => reviewed
2013-03-13 17:24 bugmaster Assigned To bugmaster => mkv
2013-03-14 15:47 mkv Note Added: 0023723
2013-03-14 15:47 mkv Test case number => Not needed
2013-03-14 15:47 mkv Assigned To mkv => bugmaster
2013-03-14 15:47 mkv Status reviewed => tested
2013-03-20 13:03 emv Changeset attached => occt master a82b7ef7
2013-03-20 13:03 emv Assigned To bugmaster => emv
2013-03-20 13:03 emv Status tested => verified
2013-03-20 13:03 emv Resolution open => fixed
2013-04-23 13:35 aiv Status verified => closed
2013-04-29 15:24 aiv Fixed in Version => 6.6.0