0023809: New compiler warnings in new BOP, 64-bit VC++ 9.0. Standard_Size have been replaced by Standard_Integer to avoid warnings.